# damnvulnerablemcpserver

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
lab-data/: app-config.json  burp-demo.txt  payroll.csv
secrets/: mock-secrets.txt
vulnerable_mcp/: __init__.py  auth.py  data.py  database.py  http_app.py  server.py
vulnerable_mcp/tools/: __init__.py  auth_tools.py  file_tools.py  sqli_tools.py  ssrf_tools.py  unauth_tools.py
