[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnerable-mcp-server"
version = "0.1.0"
description = "A deliberately vulnerable MCP server for security education."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
vulnerable-mcp = "vulnerable_mcp.server:main"

[tool.setuptools.packages.find]
include = ["vulnerable_mcp*"]
